<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileAct"
    >

    <LinearLayout
        android:id="@+id/lLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:src="@drawable/photo"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lLayout4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/authorName"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/authorNim"
            android:textColor="@color/black"
            android:paddingLeft="0dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/authorClass"
            android:textColor="@color/black"
            android:paddingLeft="0dp"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lLayoutRef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lLayout5"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/reference"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textSize="25dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/link1"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/link2"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/link3"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/link4"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/link5"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/link6"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/link7"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lLayoutRef"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        >
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>